tests/core/error/expression-logical-1.rq
SELECT ('a' || false AS ?op) { }
